# CachyOS.f

./: .gitignore  README.md  cachyos-dotfiles
.codewhale/: instructions.md
cachyos-dotfiles-tui-rs/: Cargo.toml
cachyos-dotfiles-tui-rs/src/: default_manifest.json  main.rs
