[package]
name = "cachyos-dotfiles-tui"
version = "1.0.0"
edition = "2021"
description = "Terminal UI for cachyos-dotfiles — browse, toggle, backup, and restore CachyOS + KDE dotfiles"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
