[package]
name = "cachyos-dotfiles-tui"
version = "1.2.2"
edition = "2024"
description = "Terminal UI for cachyos-dotfiles — browse, toggle, backup, and restore CachyOS + KDE dotfiles"
license = "MIT"
repository = "https://github.com/ahmedalfahdi/CachyOS.f"
readme = "../README.md"
keywords = ["dotfiles", "tui", "backup", "cachyos", "kde"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
